<resources>
    <string name="app_name">Retrofit App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_id">User ID:</string>
    <string name="user_login_text_view">User login:</string>
    <string name="user_info_button">Перейти</string>
    <string name="login_follower">Login:</string>
    <string name="login_user">Login:</string>
    <string name="id_user">ID:</string>
    <string name="url_user">URL:</string>
    <string name="followers_btn">Followers</string>
    <string name="following_btn">Followings</string>
</resources>